refactoring integration tests with spring security and @WithUserDetails